testsuite/tests/properties/invalid_bind/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- or(BarNode("example") | BazNode("example"))
}
